2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpconv.c: Fail if not called correctly.
	* src/grpconv.c: At the end of main, the passwd and shadow files
	are locked. No need to check before unlocking. No need to set the
	lock as false neither since there cannot be anymore failures.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: EPOCH is not needed, it's converted to -1 by
	strtoday(). But we need to support "-1" specifically.
	* src/chage.c: Fix usage: LOGIN is mandatory.
	* src/chage.c: Display disabled expiry or last change as "-1"
	instead of 1969-12-31. 1969-12-31 is still supported as input from
	the user.
	* src/chage.c: Exit cleanly with fail_exit() (lock files were not
	removed).

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Remove def_file. It was always set to
	USER_DEFAULTS_FILE.
	* src/useradd.c: Fix cut&paste issue causing bad warning when
	the useradd.default file contains an invalid INACTIVE= value.
	* src/useradd.c: Added missing end of line for rename errors.
	* src/useradd.c: Added -D synopsis to the usage message.
	* src/useradd.c: Do not scale_age(-1), just use -1.
	* src/useradd.c: Added FIXME to be fixed later.
	* src/useradd.c: Allow -e -1 when there is no shadow file.
	* src/useradd.c: Fail, but do not print the usage message when the
	-e argument is not valid.
	* src/useradd.c: No need to check for oflg since uflg is
	already checked.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Too much const were added on 2011-08-15. pw in
	save_caller_context() is allocated and freed.
	* src/su.c: Added missing #endif indication
	* src/su.c save_caller_context(): password only needed if
	SU_ACCESS and !USE_PAM.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: date_to_str() is always called with negativ set
	to "never", remove this argument.